# MeglingBot

./: .gitignore  config_example  flake.nix  main.py  pyproject.toml  requirements.txt
db/: voice.db
megling/: extloader.py  getconfig.py  logsetup.py  utils.py
megling/cogs/: admin.py  balBDManager.py  balance.py  embed.py  errorhandler.py  example.py  owner.py  raid.py  raidDBManager.py  reloader.py  rolemenu.py  rr.py  settings.py  vc.py  views.py  voice.py
megling/db/: __init__.py  balance.py  raid.py  voice.py
megling/templates/embeds/: test.py
megling/templates/views/: select_role.py
